// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuoteContainer block renders quote container and unsupported child 2`] = `
<div>
  <div
    class="reark-quote-container"
  >
    <div
      class="reark-unsupported-block"
    >
      <strong>
        Unsupported block type: 
        98
      </strong>
    </div>
  </div>
</div>
`;

exports[`renders quote container with no children 2`] = `
<div>
  <div
    class="reark-quote-container"
  />
</div>
`;
